syntax = "proto3";
package grpc;
option go_package="dev.app.v1;app";

service AppService {
  rpc GetEmployeesList(EmployeesRequest) returns (EmployeesAnswer);
  rpc GetEmployeeAbsencesInfo(EmployeesAbsencesRequest) returns (EmployeesAbsencesAnswer);
}

message EmployeesInfo {
  int32 id = 1;
  string name = 2;
  string workPhone = 3;
  string email = 4;
  string dateFrom = 5;
  string dateTo = 6;
}

message EmployeesAnswerInfo {
  int32 id = 1;
  string displayName = 2;
  string email = 3;
  string workPhone=4;
}

message EmployeesRequest {
  EmployeesInfo employeeInfo=1;
}

message EmployeesAnswer {
  string status = 1;
  repeated EmployeesAnswerInfo data = 2;
}

message EmployeesAbsencesInfo {
  int32 id = 1;
  int32 personId = 2;
  string createdDate = 3;
  string dateFrom = 4;
  string dateTo = 5;
  int32 reasonId = 6;
}

message EmployeesAbsencesRequest {
  EmployeesAbsencesInfo employeesAbsencesInfo=1;
}

message EmployeesAbsencesAnswer {
  string status = 1;
  repeated EmployeesAbsencesInfo data = 2;
}